update: resume file

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="project" data-aos="fade-up">
       <div class="project-image">
         <img src="src/assets/netflix.jpg">
-        <p>Photo by <a href="https://unsplash.com/@giordanorossoni?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Giordano Rossoni</a> on <a href="https://unsplash.com/photos/person-using-macbook-pro-on-white-table-sx1f8vqTsu8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Photo by <a href="https://unsplash.com/@giordanorossoni?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Giordano Rossoni</a> on <a href="https://unsplash.com/photos/person-using-macbook-pro-on-white-table-sx1f8vqTsu8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
       </div>
       <div class="project-content">
         <h2 class="title">Netflix Navigator: Illuminating the IMDb Realm</h2>
@@ -57,7 +57,7 @@
     <div class="project" data-aos="fade-up">
       <div class="project-image">
         <img src="src/assets/college_students.jpg">
-        <p>Photo by <a href="https://unsplash.com/@dollargill?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dollar Gill</a> on <a href="https://unsplash.com/photos/man-reading-in-library-qlP7MgTFwpk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Photo by <a href="https://unsplash.com/@dollargill?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dollar Gill</a> on <a href="https://unsplash.com/photos/man-reading-in-library-qlP7MgTFwpk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
       </div>
       <div class="project-content">
         <h2 class="title">A Robust Recommendation System for Undergraduate Program Selection</h2>
@@ -72,7 +72,7 @@
     <div class="project" data-aos="fade-up">
       <div class="project-image">
         <img src="src/assets/nba_players.jpg">
-        <p>Photo by <a href="https://unsplash.com/@r1naldi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Otavio Rinaldi</a> on <a href="https://unsplash.com/photos/a-person-holding-a-basketball-Gd-w-yUOsE0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Photo by <a href="https://unsplash.com/@r1naldi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Otavio Rinaldi</a> on <a href="https://unsplash.com/photos/a-person-holding-a-basketball-Gd-w-yUOsE0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
       </div>
       <div class="project-content">
         <h2 class="title">Exploring Player Similarities: Clustering NBA Players</h2>
@@ -89,7 +89,7 @@
     <div class="project" data-aos="fade-up">
       <div class="project-image">
         <img src="src/assets/blm.jpg">
-        <p>Photo by <a href="https://unsplash.com/@oladimeg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Oladimeji Odunsi</a> on <a href="https://unsplash.com/photos/persons-right-fist-grayscale-photography-e-TuK4z2LhY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Photo by <a href="https://unsplash.com/@oladimeg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Oladimeji Odunsi</a> on <a href="https://unsplash.com/photos/persons-right-fist-grayscale-photography-e-TuK4z2LhY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
       </div>
       <div class="project-content">
         <h2 class="title">Insights into Public Perception: Black Lives Matter Campaign Analysis</h2>
@@ -105,7 +105,7 @@
     <div class="project" data-aos="fade-up">
       <div class="project-image">
         <img src="src/assets/text_emotion.jpg">
-        <p>Photo by <a href="https://unsplash.com/@martenbjork?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marten Bjork</a> on <a href="https://unsplash.com/photos/person-holding-space-gray-iphone-x-FVtG38Cjc_k?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Photo by <a href="https://unsplash.com/@martenbjork?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marten Bjork</a> on <a href="https://unsplash.com/photos/person-holding-space-gray-iphone-x-FVtG38Cjc_k?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
       </div>
       <div class="project-content">
         <h2 class="title">Unveiling Emotions: Text-based Emotion Detection</h2>
@@ -121,7 +121,7 @@
     <div class="project" data-aos="fade-up">
       <div class="project-image">
         <img src="src/assets/entity_recognition.jpg">
-        <p>Photo by <a href="https://unsplash.com/@martenbjork?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marten Bjork</a> on <a href="https://unsplash.com/photos/person-opening-the-book-R4N7l_B7r2M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+        <p>Photo by <a href="https://unsplash.com/@martenbjork?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marten Bjork</a> on <a href="https://unsplash.com/photos/person-opening-the-book-R4N7l_B7r2M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a></p>
       </div>
       <div class="project-content">
         <h2 class="title">Unleashing the Potential of Hidden Markov Model in Named Entity Recognition for Indonesian Text</h2>
