initial commit about page

--- a/about.html
+++ b/about.html
@@ -26,16 +26,74 @@
   </div>
 
   <div id="hero" data-aos="fade-up">
-    <div class="hero-section">
+    <div class="about-section">
+      <img src="src/assets/me_circle.png">
       <div>
-        <h1>Hi, I'm Rio</h1>
-        <h2>Data Scientist / Data Analyst / Data Engineer / Python Developer</h2>
-        <p>Experienced data scientist with 7+ years in analytics, consulting, advertising, and market research. Skilled in Python, statistics, and machine learning, with a background in back-end development. Ready to drive data-driven success in any team.</p>
+        <h1>Rio Rizki Aryanto</h1>
+        <p>With 8 years of experience spanning consulting, advertising, and sensory analysis, I specialize in Python for data analysis, statistics, and machine learning, coupled with proficiency in back-end development. The objective is to leverage this expertise to drive data-driven outcomes within a collaborative team environment.</p>
       </div>
     </div>
   </div>
-    
-  <div id="contacts-container" data-aos="fade-up">
+  
+  <div id="experiences" data-aos="fade-up">
+    <h3>Experience</h3>
+    <div class="experience" data-aos="fade-up">
+      <div class="experience-content" data-aos="fade-up">
+        <h2>Data Scientist at <a class="company-link" href="https://www.thrive.co.id" target="_blank">Thrive</a></h2>
+        <h3>Feb 2023 - Present</h3>
+        <ul class="bullet-list">
+          <li>Led and mentored a team of Jr. Data Scientists, optimizing operational efficiency and fostering professional development.</li>
+          <li>Achieved a 60% reduction in data processing time through streamlined ETL processes.</li>
+          <li>Automated data labeling process, reducing labeling time by 80% using deep learning approach.</li>
+          <li>Exceeded project target by 75% in business intelligence dashboard development for client.</li>
+          <li>Developed RFM model for digital marketing activities using Python.</li>
+          <li>Established data streamlined that utilized several ads platform API such as TikTok, Evadav, and many more.</li>
+        </ul>
+        <h2>Data Scientist / Python Backend Developer at <a class="company-link" href="https://flavorwiki.com/" target="_blank">FlavorWiki</a></h2>
+        <h3>Apr 2021 - Jan 2023</h3>
+        <ul class="bullet-list">
+          <li>Developed and implemented new analytic features within FlavorWiki's app, contributing to enhanced data-driven decision-making capabilities.</li>
+          <li>Improved existing analytic features within FlavorWiki's app.</li>
+          <li>Designed and executed a sensory analytic test from scratch using Python for a client app.</li>
+          <li>Conceptualized and developed a customized business intelligence dashboard to optimize operational team performance, facilitating real-time monitoring and improving on-time delivery metric.</li>
+        </ul>
+        <h2>Data Scientist at <a class="company-link" href="https://www.thrive.co.id" target="_blank">Thrive</a></h2>
+        <h3>Aug 2017 - Apr 2021</h3>
+        <ul class="bullet-list">
+          <li>Automated manual data pipeline processes, ensuring real-time data availability for enhancing operational efficiency.</li>
+          <li>Provided data science solutions for customer complaint analysis, facilitating informed decision-making for the client.</li>
+          <li>Developed audience segmentation model, resulting in threefold improvement in digital marketing campaign performance.</li>
+          <li>Built predictive data model for campaigns KPI and spending optimization.</li>
+          <li>Designed and developed ad monitoring dashboard to ensure campaign monitoring activities.</li>
+        </ul>
+        <h2>Jr. Data Scientist at <a class="company-link" href="https://dattabot.io/" target="_blank">Dattabot</a></h2>
+        <h3>Aug 2016 - Aug 2017</h3>
+        <ul class="bullet-list">
+          <li>Conducted research on Named Entity Recognition using Hidden Markov Model.</li>
+          <li>Collaborated with data engineers to fine-tuning existing data models.</li>
+        </ul>
+        <h2>Data Analyst at <a class="company-link" href="http://www.adstensity.com/" target="_blank">Adstensity</a></h2>
+        <h3>Jan 2016 - Aug 2016</h3>
+        <ul class="bullet-list">
+          <li>Validated new data entries for database integrity and alignment.</li>
+          <li>Analyzed TV ad monitoring data to provide actionable insights for clients.</li>
+        </ul>
+      </div>
+  </div>
+
+  <div class="educations" data-aos="fade-up">
+    <h3>Education</h3>
+    <div class="education">
+      <div class="education-content">
+        <h2>Universitas Islam Indonesia</a></h2>
+        <h3>Master of Informatic · GPA 3.97 · Feb 2020 - Feb 2022</h3>
+        <h2>Universitas Gadjah Mada</a></h2>
+        <h3>Bachelor Degree of Statistic · GPA 3.59 · Aug 2011 - May 2015</h3>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div id="contacts-container" data-aos="fade-up">
     <h3>Get in touch</h3>
     <div class="contacts">
       <a href="https://www.linkedin.com/in/riorizkiaryanto/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -44,7 +102,7 @@
       <a href="https://twitter.com/riorizki23" target="_blank"><i class="fab fa-twitter"></i></a>
       <a href="https://www.instagram.com/riorizki/" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
-  </div>
+  </div> -->
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI/tZ1aP6oIbYz9lGWbaW6yOs1zfeJevr1BQaJ2I=" crossorigin="anonymous"></script>
   <script src="aos.js"></script>
