--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div>
         <h1>Hi, I'm Rio</h1>
         <h2>Data Scientist / Data Analyst / Data Engineer / Python Developer</h2>
-        <p>Experienced data scientist with 7+ years in analytics, consulting, advertising, and market research. Skilled in Python, statistics, and machine learning, with a background in back-end development. Ready to drive data-driven success in any team.</p>
+        <p>based in Indonesia</p>
       </div>
     </div>
   </div>
