update: about me page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div>
     <nav>
       <!-- <a href="#hero">Home</a> -->
-      <!-- <a href="./about.html">About</a> -->
+      <a href="./about.html">About</a>
       <a href="src/file/Resume_Rio_Rizki_Aryanto.pdf" target="_blank">Resume</a>
       <a href="#projects">Projects</a>
       <!-- <a href="#services-container">Services</a> -->
