update: fix about page, miss tagging HTML

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
     <nav>
       <a href="./index.html">Home</a>
       <a href="src/file/Resume_Rio_Rizki_Aryanto.pdf" target="_blank">Resume</a>
-      <a href="#projects">Projects</a>
-      <!-- <a href="#services-container">Services</a> -->
+      <a href="#experiences">Experience</a>
       <a href="#testimonials">Testimonials</a>
+      <a href="#contacts-container">Contact</a>
     </nav>
   </div>
 
@@ -77,6 +77,7 @@
           <li>Analyzed TV ad monitoring data to provide actionable insights for clients.</li>
         </ul>
       </div>
+    </div>
   </div>
 
   <div id="educations" data-aos="fade-up">
@@ -94,31 +95,37 @@
   <div id="testimonials" class="recommendations" data-aos="fade-up">
     <h3>Testimonials</h3>
     <div class="testimoni-container">
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/D4D03AQHxP66ELYFrpg/profile-displayphoto-shrink_100_100/0/1701166346748?e=1718841600&v=beta&t=tgbVjye-UcAe0_rUeW0duGdYF-tb-eRmkvP2vUDloCk">
             <h2>Zeeshan Imran</h2>
             <h3>Founder, COO at Gigalabs | Co-Founder, CTO at Codelabs Global | Head of Technology, FlavorWiki</h3>
+            <a href="https://www.linkedin.com/in/zeeshan-imran-7bb23351/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
-              <p>I had the privilege of closely collaborating with Rio during our time at FlavorWiki, and I can attest that it was a truly enriching experience. Rio's proficiency in problem-solving is truly praiseworthy. What distinguishes Rio the most is their outstanding attention to detail. This attribute not only ensures the production of top-notch work but also significantly enhances the dynamics within the team.I had the privilege of closely collaborating with Rio during our time at FlavorWiki, and I can attest that it was a truly enriching experience. Rio's proficiency in problem-solving is truly praiseworthy. What distinguishes Rio the most is their outstanding attention to detail. This attribute not only ensures the production of top-notch work but also significantly enhances the dynamics within the team.</p>
+              <p>I had the privilege of closely collaborating with Rio during our time at FlavorWiki, and I can attest that it was a truly enriching experience. Rio's proficiency in problem-solving is truly praiseworthy. What distinguishes Rio the most is their outstanding attention to detail. This attribute not only ensures the production of top-notch work but also significantly enhances the dynamics within the team.</p>
             </div>
           </div>
         </div>
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/C5603AQFmEnsQFHhJGA/profile-displayphoto-shrink_100_100/0/1565818289466?e=1718841600&v=beta&t=HOhtzcE1_CBch96ECgDvT7eK-1kHHAs7rL7ahW54Us0">
             <h2>Luiney Sepúlveda</h2>
             <h3>Consumer Insights | Market Research | Global R&D | SaaS Startup | EMBA | Ex-PG</h3>
+            <a href="https://www.linkedin.com/in/luiney-sepulveda/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
               <p>Having worked with Rio for almost two years on multiple projects, I can say he is an excellent professional and data scientist. He was able to quickly learn how traditional methodologies worked and created automatization that allowed him to increase the speed of the data analysis process. Streamlining the analysis allowed us to evaluate complex sets of data in record time. He also created a predictive model that enabled one of our key clients to develop a plan to upgrade their products based on consumer response. He is an outstanding individual and a great colleague, any company will be lucky to have him as part of its team.</p>
             </div>
           </div>          
         </div>
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/C4D03AQG9pqTtwY6y6w/profile-displayphoto-shrink_100_100/0/1617311380878?e=1718841600&v=beta&t=Yokm-CX8QO4NHs-tBoNwXdlRE1N-ShlextIEBh-vVwo">
             <h2>Mustafa Ali Fayyaz</h2>
             <h3>Sr. Project Coordinator | Lead SQA Engineer</h3>
+            <a href="https://www.linkedin.com/in/mustafaalifayyaz/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
               <p>I have had the pleasure of collaborating with Rio on a remote team project, where his role as a Data Science Manager and Python Back-end Developer truly shone. Rio's mastery in both domains is remarkable and significantly contributed to the success of our endeavors.
 
@@ -130,11 +137,13 @@
             </div>
           </div>          
         </div>
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/D5603AQGAdM_0F59-fA/profile-displayphoto-shrink_100_100/0/1673884226154?e=1718841600&v=beta&t=9LCjKk56r4D0p-ctyx704-55_jSTBNrk1ktLlfumS3s">
             <h2>Raunak Tauladar</h2>
             <h3>Director | IT Leader | Startup Advisor | Certified Project Manager | Certified Product Owner | Upwork Freelancer</h3>
+            <a href="https://www.linkedin.com/in/raunaktuladhar/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
               <p>I had the pleasure of working closely with Rio, and his talent in the Data, SEO, and Digital Marketing fields is truly exceptional. His calm and patient approach makes him a standout professional, and it's a rarity to find someone with such a combination of skills and a helpful attitude.
 
@@ -146,21 +155,25 @@
             </div>
           </div>          
         </div>
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/D4D03AQF8BjM0kLpJ2w/profile-displayphoto-shrink_100_100/0/1667228739055?e=1718841600&v=beta&t=BnaXYI4Cy6hazXE27_Ee8Kc0uNct2nul9ByzYEEvGf4">
             <h2>Lion Jooste</h2>
             <h3>Project Manager ! Queue (q-ueue.ai) Top 3% Talent on Upwork</h3>
+            <a href="https://www.linkedin.com/in/lion-jooste-bab423a0/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
               <p>I worked with Rio for just over a year or so and I must say Rio is one of the most data-driven people I have had the pleasure to work with. He knew exactly how to get the data we needed to make accurate and swift decisions in the extremely fast-paced industry we are both in. He was exceptional in forecasting using previous and real-time data, evaluating Consumer Insights, and much more. He is a pleasure to work with and will highly recommend him to anyone.</p>
             </div>
           </div>          
         </div>
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/D5603AQF5DKmHGlzpew/profile-displayphoto-shrink_100_100/0/1697052665076?e=1718841600&v=beta&t=X78uQJ9Xip_qs_Msrc1OIndengi6t55tv54KkCnDe9k">
             <h2>Gleda Ui</h2>
             <h3>UI/UX Designer | Product Designer</h3>
+            <a href="https://www.linkedin.com/in/gledaui/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
               <p>I had the pleasure of collaborating with Rio at FlavorWiki, where he served as a Data scientist while I was a UI/UX designer at the same company. He was able to translate complex data concepts into simple terms to enhance our marketing web application. He indeed possesses the ability to simplify complex data concepts, making him a valuable asset. 
 
@@ -168,11 +181,13 @@
             </div>
           </div>          
         </div>
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/C5603AQEJsDCnmjLyiA/profile-displayphoto-shrink_100_100/0/1611413643750?e=1718841600&v=beta&t=wTaYPV6zW2W3THacquZ_NGrVLTertly5ueVzkkS0KBs">
             <h2>Doria Rachmawati</h2>
             <h3>Market Research | Project Management</h3>
+            <a href="https://www.linkedin.com/in/doriarach/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
               <p>I am delighted to recommend Rio based on our collaborative work for a year. Rio's exceptional skills as a data scientist significantly contributed to our project's success! His analytical prowess, attention to detail, and collaborative approach set him apart.
 
@@ -180,11 +195,13 @@
             </div>
           </div>          
         </div>
+
         <div class="testimoni">
           <div class="testimoni-content">
             <img src="https://media.licdn.com/dms/image/C4D03AQEqRXmfSpfjbA/profile-displayphoto-shrink_100_100/0/1579460500280?e=1718841600&v=beta&t=hcTgw6rJShCFFh6gWiUwRX8hxE-zVuDx8vXZVqfqzus">
             <h2>Akindamola Ipoola</h2>
             <h3>Lead Project Manager | Data Expert | Research & Consumer Insight Analyst</h3>
+            <a href="https://www.linkedin.com/in/akindamola-ipoola-97328b159/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <div class="testimoni-content-text">
               <p>I highly recommend Rio for any collaborative role. For the few months we worked together, he continuously demonstrated selfless commitment toward advancing team success.
 
@@ -194,6 +211,7 @@
             </div>
           </div>          
         </div>
+
     </div>
     <div class="navigation">
       <button class="nav-btn prev">&#10094;</button>
@@ -201,8 +219,6 @@
     </div>
   </div>
 
-  
-<!-- 
   <div id="contacts-container" data-aos="fade-up">
     <h3>Get in touch</h3>
     <div class="contacts">
@@ -212,7 +228,11 @@
       <a href="https://twitter.com/riorizki23" target="_blank"><i class="fab fa-twitter"></i></a>
       <a href="https://www.instagram.com/riorizki/" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
-  </div> -->
+  </div>
+
+  <button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i>
+  </button>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI/tZ1aP6oIbYz9lGWbaW6yOs1zfeJevr1BQaJ2I=" crossorigin="anonymous"></script>
   <script src="aos.js"></script>
