--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <a href="./about.html">About</a>
       <a href="src/file/Resume_Rio_Rizki_Aryanto.pdf" target="_blank">Resume</a>
       <a href="#projects">Projects</a>
-      <!-- <a href="#services-container">Services</a> -->
       <a href="#contacts-container">Contact</a>
     </nav>
   </div>
@@ -146,6 +145,11 @@
     </div>
   </div>
 
+  <button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i>
+  </button>
+
+
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI/tZ1aP6oIbYz9lGWbaW6yOs1zfeJevr1BQaJ2I=" crossorigin="anonymous"></script>
   <script src="aos.js"></script>
   <script>
@@ -155,6 +159,7 @@
           once: false
       });
   </script>
+  <script src="navigation.js"></script>
 
 </body>
 </html>
