initial commit: projects page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <a href="src/file/Resume_Rio_Rizki_Aryanto.pdf" target="_blank">Resume</a>
       <a href="#experiences">Experience</a>
       <a href="#testimonials">Testimonials</a>
-      <a href="#contacts-container">Contact</a>
+      <!-- <a href="#contacts-container">Contact</a> -->
     </nav>
   </div>
 
