--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <div>
     <nav>
-      <a href="./about.html">About</a>
+      <a href="about.html">About</a>
       <a href="src/file/Resume_Rio_Rizki_Aryanto.pdf" target="_blank">Resume</a>
-      <a href="#projects">Projects</a>
+      <a href="projects.html">Projects</a>
       <a href="#contacts-container">Contact</a>
     </nav>
   </div>
@@ -43,7 +43,7 @@
       <div class="project-content">
         <h2 class="title">Netflix Navigator: Illuminating the IMDb Realm</h2>
         <p class="paragraph">Embark on an IMDb odyssey through Netflix's expansive universe with our cutting-edge dashboard, featuring 15 years' worth of movies and TV shows. Our Gaussian Mixture model separates the best from the rest, unveiling top-rated gems for your viewing pleasure.</p>
-        <p class="note">Data Science, Machine Learning, Looker, Python</p>
+        <p class="note"><strong>Tags: </strong>Personal, Data Science, Machine Learning, Looker, Python</p>
         <div class="project-urls">
           <a href="https://lookerstudio.google.com/reporting/ca55cecd-6cfd-4d30-9ae8-c344ccb524a7/page/A5mE" target="_blank"><i class="fas fa-chart-line"></i></a>
         </div>
@@ -58,7 +58,7 @@
       <div class="project-content">
         <h2 class="title">A Robust Recommendation System for Undergraduate Program Selection</h2>
         <p class="paragraph">Developing an advanced machine learning-based recommendation system, employing a robust classification model, to facilitate the optimal selection of undergraduate programs.</p>
-        <p class="note">Data Science, Machine Learning, Education, Python</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, Education, Python</p>
         <div class="project-urls">
           <a href="https://github.com/riorizkiaryanto/recommendation-system-undergraduate-program" target="_blank"><i class="fab fa-github"></i></a>
         </div>
@@ -73,7 +73,7 @@
       <div class="project-content">
         <h2 class="title">Exploring Player Similarities: Clustering NBA Players</h2>
         <p class="paragraph">Utilize a state-of-the-art clustering model to effectively segment NBA players, leveraging their performance data from the 2017-2018 season.</p>
-        <p class="note">Data Science, Machine Learning, Sport Science, Python</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, Sport Science, Python</p>
         <div class="project-urls">
           <a href="https://medium.com/nerd-for-tech/clustering-nba-player-using-k-means-7b568830edfd" target="_blank"><i class="fab fa-medium"></i></a>
           <a href="https://github.com/riorizkiaryanto/clustering-nba-players" target="_blank"><i class="fab fa-github"></i></a>
@@ -90,7 +90,7 @@
       <div class="project-content">
         <h2 class="title">Insights into Public Perception: Black Lives Matter Campaign Analysis</h2>
         <p class="paragraph">Delve into our analysis of Twitter discourse surrounding the Black Lives Matter campaign, uncovering shifts in sentiment, key events shaping public reaction, and the diverse voices driving the movement for racial justice.</p>
-        <p class="note">Data Science, Machine Learning, Black Lives Matter, Python, Spark, Twitter</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, Black Lives Matter, Python, Spark, Twitter</p>
         <div class="project-urls">
           <a href="https://medium.com/nerd-for-tech/clustering-nba-player-using-k-means-7b568830edfd" target="_blank"><i class="fab fa-medium"></i></a>
           <a href="https://github.com/riorizkiaryanto/clustering-nba-players" target="_blank"><i class="fab fa-github"></i></a>
@@ -106,7 +106,7 @@
       <div class="project-content">
         <h2 class="title">Unveiling Emotions: Text-based Emotion Detection</h2>
         <p class="paragraph">Crafting an Advanced Data Model for Accurate Emotion Detection in Indonesian Text</p>
-        <p class="note">Data Science, Machine Learning, NLP, Python</p>
+        <p class="note"><strong>Tags: </strong>Educational, Data Science, Machine Learning, NLP, Python</p>
         <div class="project-urls">
           <a href="https://riorizkiaryanto.medium.com/emotion-analysis-for-topic-mudik-during-covid-19-pandemic-56d19bc61aa1" target="_blank"><i class="fab fa-medium"></i></a>
           <a href="https://github.com/riorizkiaryanto/emotion-detection-on-text" target="_blank"><i class="fab fa-github"></i></a>
@@ -122,7 +122,7 @@
       <div class="project-content">
         <h2 class="title">Unleashing the Potential of Hidden Markov Model in Named Entity Recognition for Indonesian Text</h2>
         <p class="paragraph">Leveraging the Power of Hidden Markov Model: Advancing Named Entity Recognition for Indonesian Text.</p>
-        <p class="note">Data Science, Machine Learning, NLP, Python</p>
+        <p class="note"><strong>Tags: </strong>Professional, Data Science, Machine Learning, NLP, Python</p>
         <div class="project-urls">
           <a href="https://github.com/riorizkiaryanto/ner-hmm" target="_blank"><i class="fab fa-github"></i></a>
         </div>
@@ -131,8 +131,8 @@
   </div>
 
   <div class="learn-more" data-aos="fade-up">
-    <p><a href="#projects">Learn more projects</a></p>
-</div>
+    <a href="projects.html">Learn more projects</a>
+  </div>
     
   <div id="contacts-container" data-aos="fade-up">
     <h3>Get in touch</h3>
